Correct next/previous visible position algorithms next to void elements

--- a/src/aloha.css
+++ b/src/aloha.css
@@ -7,7 +7,7 @@ body {
 	margin: 0;
 	padding: 10% 20%;
 	color: #565452;
-	font-size: 30px;
+	font-size: 20px;
 	line-height: 1.6em;
 	min-height: 100%;
 	box-shadow: 0 0 100px rgba(0,0,0,0.2) inset;
